# RustTTS

./: .gitignore  AGENTS.md  BENCHMARK.md  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: model.example.toml  runtime.example.toml  server.example.toml
crates/acoustic-model/: Cargo.toml
crates/acoustic-model/benches/: inference.rs  kv_cache.rs
crates/acoustic-model/src/: cache.rs  code_predictor.rs  config.rs  layers.rs  lib.rs  model.rs  sampling.rs
crates/audio-codec-12hz/: Cargo.toml
crates/audio-codec-12hz/benches/: decode.rs
crates/audio-codec-12hz/examples/: decode_tokens.rs
crates/audio-codec-12hz/src/: crossfade.rs  decoder.rs  lib.rs  wav.rs
crates/audio-codec-12hz/tests/: conv1d_test.rs  decode_compare.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: allocator.rs  device.rs  lib.rs  logging.rs  metal_cache.rs  metrics.rs  pipeline.rs  profiler.rs  queue.rs  tracing_setup.rs  warm.rs
crates/runtime/tests/: integration_test.rs
crates/text-normalizer/: Cargo.toml
crates/text-normalizer/src/: lib.rs  num2words.rs  rules.rs
crates/text-normalizer/tests/: golden_tests.rs
crates/text-tokenizer/: Cargo.toml
crates/text-tokenizer/src/: lib.rs
crates/text-tokenizer/tests/: integration_tests.rs
crates/text-tokenizer/tests/fixtures/: test_tokenizer.json
crates/tts-app/: Cargo.toml  tauri.conf.json
crates/tts-app/src/: lib.rs  main.rs  tts.rs
crates/tts-app/ui/: index.html
crates/tts-cli/: Cargo.toml
crates/tts-cli/src/: main.rs
crates/tts-cli/src/commands/: bench.rs  info.rs  mod.rs  normalize.rs  quantize.rs  synth.rs  tokenize.rs
crates/tts-core/: Cargo.toml
crates/tts-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/tts-server/: Cargo.toml  build.rs
crates/tts-server/proto/: tts.proto
crates/tts-server/src/: lib.rs  main.rs  server.rs  service.rs
crates/tts-server/src/proto/: mod.rs  tts.v1.rs
docs/: DEVELOPMENT.md  KV_CACHE_OPTIMIZATION_PLAN.md  PRD.md  architecture.md  benchmark.md  noise-fix-lookahead.md  optimization_plan.md  plan_metal_support.md  quantization_plan.md  roadmap.md
docs/phases/: phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7-integration.md
example/: time.md
scripts/: debug_generation_step_by_step.py  debug_layer0_attention.py  debug_layer_by_layer.py  download_models.sh  dump_code_predictor.py  dump_real_past_hidden.py  generate_reference.py  generate_reference_greedy.py  generate_reference_simple.py  inspect_weights.py
tests/golden/: code_predictor_debug.json  debug_generation.json  layer0_attention_debug.json  layer_by_layer.json  prefill_greedy.json  real_past_hidden.json  reference_codes.json  reference_codes_fully_greedy.json  reference_codes_greedy.json
