[package]
name = "acoustic-model"
description = "Acoustic model (transformer) for Qwen3-TTS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda"]
golden_tests = []

[dependencies]
tts-core.workspace = true

# Tensor operations
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
safetensors.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Logging
tracing.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Utilities
rand.workspace = true
parking_lot.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion.workspace = true

[[bench]]
name = "inference"
harness = false
