[package]
name = "runtime"
description = "Runtime orchestration for Qwen3-TTS (batching, QoS, metrics)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
server = ["tonic", "prost"]
cuda = ["acoustic-model/cuda", "audio-codec-12hz/cuda", "candle-core/cuda"]
metal = ["acoustic-model/metal", "audio-codec-12hz/metal", "candle-core/metal"]
accelerate = ["acoustic-model/accelerate", "audio-codec-12hz/accelerate", "candle-core/accelerate"]
golden_tests = []

[dependencies]
tts-core.workspace = true
text-normalizer.workspace = true
text-tokenizer.workspace = true
acoustic-model.workspace = true
audio-codec-12hz.workspace = true

# Tensor operations (for Device type)
candle-core.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Logging and metrics
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Utilities
parking_lot.workspace = true
dashmap.workspace = true
uuid.workspace = true

# Optional: gRPC server
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
candle-core.workspace = true
