[package]
name = "tts-app"
version = "0.1.0"
description = "Qwen3-TTS Desktop Application"
authors = ["RustTTS Team"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[lib]
name = "tts_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Our TTS runtime
runtime = { path = "../runtime" }
tts-core = { path = "../tts-core" }
audio-codec-12hz = { path = "../audio-codec-12hz" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# Audio playback
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tensor operations (for device selection)
candle-core = "0.8"

# System directories
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
